Assign debug info in the lir with a much greater garrentee of it